// $Id$

Admin Menu x.x-x.x, xxxx-xx-xx
------------------------------


Admin Menu 7.x-x.x, xxxx-xx-xx
------------------------------


Admin Menu 6.x-x.x, xxxx-xx-xx
------------------------------
#132524 by pwolanin: Fixed admin_menu links are re-inserted each time menu links
  are rebuilt.


Admin Menu 6.x-1.0-BETA, 2008-06-08
-----------------------------------
#132524 by sun: Fixed support for sub-content-types below node/add.
#132524 by pwolanin: Added support for localizable menu links.
#132524 by pwolanin, sun: Fixed menu links adjustments.
#132524 by pwolanin: Added simpletest.
#132524 by pwolanin: Major rewrite to better use Drupal 6 menu system.
#132524 by sun: Moved gettext translation files into translations.
#132524 by sun: Committing pre-alpha code for D6 due to public demand.


Admin Menu 5.x-2.x, xxxx-xx-xx
------------------------------
#246221 by sun: Fixed user counter displays different values than Who's online
  block.
#239022 by mikl: Added Danish translation.
#234444 by smk-ka: Fixed favicon issue for the "admin" menu.
#198240 by sun: Fixed admin_menu displayed in print output.


Admin Menu 5.x-2.4, 2008-02-24
------------------------------
#214740 by sun: Regression: Fixed directly applied marginTop not supported by IE.
#214725 by sun: Fixed wrong CSS id in admin_menu.js (missed in 5.x-2.3).


Admin Menu 5.x-2.3, 2008-02-24
------------------------------
#214725 by sun: Fixed CSS id and classes should not contain underscores.
#209390 by sun: Added note about interaction with user role permissions.
#214740 by jjeff, sun: Added module settings to configure margin-top CSS.
#200737 by sun: Changed admin_menu (fav)icon to use theme setting, if defined.
#203116 by smk-ka: Improved performance of non-cached admin_menu by storing
  already processed URLs in the cache.
#224605 by sun: 'Add <content_type>' items do not appear without 'administer
  nodes' permission.
#210615 by robertgarrigos: Fixed Mozilla Mac: Collapsible fieldsets display
  error.