@@ -1,5 +1,7 @@
 ; $Id$
-name = Administration Menu
-description = Renders a menu tree for administrative purposes as dropdown menu at the top of the window.
-package = Administration
+name = "Administration Menu"
+description = "Renders a menu tree for administrative purposes as dropdown menu at the top of the window."
+package = "Administration"
 core = 7.x
+files[] = admin_menu.module
+files[] = admin_menu.inc
