@@ -12,20 +12,18 @@
  */
 function admin_menu_help($path, $arg) {
   switch ($path) {
-    case 'admin/modules#description':
-      return t('Renders the administer menu tree as dropdown menu at the top of the window.');
     case 'admin/settings/admin_menu':
       return t('The Administration Menu will appear at the top of the page for users who have been given the "access administration menu" permission.  Customize appearance of the dropdown menu here.');
     case 'admin/help#admin_menu':
       return t(<<<EOT
-<p>Drupal Administration Menu renders all administrative menu items below 'administer' 
-in a clean, attractive and purely CSS-based menu at the top of your website.  It contains 
-not only regular menu items - local tasks are also included, giving you extremely fast 
+<p>Drupal Administration Menu renders all administrative menu items below 'administer'
+in a clean, attractive and purely CSS-based menu at the top of your website.  It contains
+not only regular menu items - local tasks are also included, giving you extremely fast
 access to any administrative resource and function your Drupal installation provides.</p>
-<p>The menu also can display the number of anonymous and authenticated users, 
+<p>The menu also can display the number of anonymous and authenticated users,
 <a href="http://drupal.org/project/devel">Devel module</a> links, and items generated by
 other modules.</p>
-<p>The <a href="!settings">settings page</a> is where administrators can choose 
+<p>The <a href="!settings">settings page</a> is where administrators can choose
 whether or not to allow the module to shift the page contents down to accommodate
 the menu.  Depending on the design/layout of your theme, this may cause problems with
 the appearance of the page.  Changing the '%margin-setting' setting may fix this
@@ -40,7 +38,10 @@ EOT
  * Implementation of hook_perm().
  */
 function admin_menu_perm() {
-  return array('access administration menu', 'display drupal links');
+  return array(
+    'access administration menu' => t('Access the administration menu, which appears at the top of the page.'), 
+    'display drupal links'=> t('View links to drupal.org in the administration menu.'),
+  );
 }
 
 /**
@@ -69,11 +70,19 @@ function admin_menu_init() {
   if (user_access('access administration menu')) {
     $path = drupal_get_path('module', 'admin_menu');
     drupal_add_css($path .'/admin_menu.css', 'module', 'all', FALSE);
-    drupal_add_js($path .'/admin_menu.js');
-    drupal_add_js(array('admin_menu_margin_top' => variable_get('admin_menu_margin_top', 1)), 'setting');
+    // Performance: Defer execution.
+    drupal_add_js($path .'/admin_menu.js', 'module', 'header', TRUE);
+
+    drupal_add_js(array('admin_menu' => array('margin_top' => variable_get('admin_menu_margin_top', 1))), 'setting');
+    if ($_GET['q'] == 'admin/build/modules') {
+      drupal_add_js(array('admin_menu' => array('tweak_modules' => variable_get('admin_menu_tweak_modules', 1))), 'setting');
+    }
   }
 }
 
+/**
+ * Implementation of hook_menu().
+ */
 function admin_menu_menu() {
   $items = array();
   $items['admin/settings/admin_menu'] = array(
@@ -83,20 +92,12 @@ function admin_menu_menu() {
     'page arguments' => array('admin_menu_theme_settings'),
     'access arguments' => array('administer site configuration'),
   );
-  return $items;
-}
-
-/**
- * Form builder function for module settings.
- */
-function admin_menu_theme_settings() {
-  $form['admin_menu_margin_top'] = array(
-    '#type' => 'checkbox',
-    '#title' => t('Apply margin-top to page body'),
-    '#default_value' => variable_get('admin_menu_margin_top', 1),
-    '#description' => t('If this setting is disabled, some absolute or fixed positioned page elements may be covered by Administration Menu.'),
+  $items['admin_menu/toggle-modules'] = array(
+    'page callback' => 'admin_menu_toggle_modules',
+    'access arguments' => array('administer site configuration'),
+    'type' => MENU_CALLBACK,
   );
-  return system_settings_form($form);
+  return $items;
 }
 
 /**
@@ -113,7 +114,7 @@ function admin_menu_theme_settings() {
 function admin_menu_footer($main = 0) {
   // Check for the flag indicating that we need to rebuild.
   if (variable_get('admin_menu_rebuild_links', FALSE)) {
-    include_once(drupal_get_path('module', 'admin_menu') . '/' . 'admin_menu.inc');
+    include_once(drupal_get_path('module', 'admin_menu') . '/admin_menu.inc');
     _admin_menu_rebuild_links();
     variable_del('admin_menu_rebuild_links');
   }
@@ -144,7 +145,7 @@ function admin_menu_tree_output($tree) {
     $extra_class = isset($data['link']['localized_options']['extra class']) ? $data['link']['localized_options']['extra class'] : NULL;
     // Omit alias lookups.
     $data['link']['localized_options']['alias'] = TRUE;
-    
+
     $link = theme('menu_item_link', $data['link']);
     if ($data['below']) {
       $output .= theme('admin_menu_item', $link, $data['link']['has_children'], admin_menu_tree_output($data['below']), $data['link']['in_active_trail'], $extra_class);
@@ -191,33 +192,8 @@ function theme_admin_menu_item($link, $has_children, $menu = '', $in_active_trai
  * Extends Devel module with Administration Menu developer settings.
  */
 function admin_menu_form_devel_admin_settings_alter(&$form, $form_state) {
-  // Shift system_settings_form buttons.
-  $weight = isset($form['buttons']['#weight']) ? $form['buttons']['#weight'] : 0;
-  $form['buttons']['#weight'] = $weight + 1;
-  
-  $form['admin_menu'] = array(
-    '#type' => 'fieldset',
-    '#title' => t('Administration Menu settings'),
-    '#collapsible' => TRUE,
-    '#collapsed' => TRUE,
-  );
-  $display_options = array('mid', 'weight', 'pid');
-  $display_options = array(0 => t('None'), 'mlid' => t('Menu link id'), 'weight' => t('Weight'), 'plid' => t('Parent link id'));
-  $form['admin_menu']['admin_menu_display'] = array(
-    '#type' => 'radios',
-    '#title' => t('Display extra information for menu items in Drupal Administration Menu'),
-    '#default_value' => variable_get('admin_menu_display', 0),
-    '#options' => $display_options,
-    '#description' => t('If enabled, the chosen information will appear next to each menu item link.'),
-  );
-  $form['admin_menu']['admin_menu_show_all'] = array(
-    '#type' => 'checkbox',
-    '#title' => t('Display all menu items'),
-    '#default_value' => variable_get('admin_menu_show_all', 0),
-    '#description' => t('Enable this option to disable user access checks for menu items, i.e. every menu item in the visible menu tree will be displayed to every user regardless of access permissions.'),
-  );
-  // Rebuild the admin menu
-  $form['#submit'][] = 'admin_menu_menu_alter';
+  include_once(drupal_get_path('module', 'admin_menu') .'/admin_menu.inc');
+  _admin_menu_devel_settings_form_alter($form, $form_state);
 }
 
 /**
@@ -256,6 +232,10 @@ function admin_menu_translated_menu_link_alter(&$item, $map) {
     if (!isset($item['localized_options'])) {
       _menu_item_localize($item, $map, TRUE);
     }
+  }
+  // Don't waste cycles altering items that are not visible
+  if (!$item['access']) {
+    return;
   }
   // Fix destination query strings
   if (isset($item['localized_options']['query'])) {
