@@ -26,7 +26,7 @@ class AdminMenuTestCase extends DrupalWebTestCase {
     // Anonymous users should not see the menu.
     $this->assertNoRaw('<div id="admin-menu">', 'Admin menu not displayed to anonymous.');
 
-    // Create a user who can see the admin_menu links, but without the 
+    // Create a user who can see the admin_menu links, but without the
     // permission 'display drupal links'.
     $admin_user = $this->drupalCreateUser(array('administer site configuration', 'access administration pages', 'administer nodes', 'access administration menu', 'administer site-wide contact form'));
     $this->drupalLogin($admin_user);
@@ -38,7 +38,7 @@ class AdminMenuTestCase extends DrupalWebTestCase {
     $this->assertFalse(preg_match('@<div id="admin-menu">(.*\n)*.*http://drupal.org@',  $this->drupalGetContent()), 'Drupal link not found');
     $this->assertFalse(preg_match('@<div id="admin-menu">(.*\n)*.*admin/build/contact@',  $this->drupalGetContent()), 'Contact module link not found');
 
-    // Check that a link for the newly enabled module appears. 
+    // Check that a link for the newly enabled module appears.
     $this->drupalModuleEnable('contact');
     $this->drupalGet('node');
     $this->assertTrue(preg_match('@<div id="admin-menu">(.*\n)*.*admin/build/contact@',  $this->drupalGetContent()), 'Contact module link found');
